--- a/bpc-angular/menu-bpc/src/app/components/navbar/navbar.component.html
+++ b/bpc-angular/menu-bpc/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,18 @@
-<p>navbar works!</p>
+<mat-toolbar>
+    <span>BPC</span>
+    <span class="spacer"></span>
+    <button
+      mat-icon-button
+      class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon"
+    >
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button
+      mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with share icon"
+    >
+      <mat-icon>share</mat-icon>
+    </button>
+  </mat-toolbar>
