--- a/bpc-angular/menu-bpc/src/app/components/hero-content/hero-content.component.html
+++ b/bpc-angular/menu-bpc/src/app/components/hero-content/hero-content.component.html
@@ -1,1 +1,6 @@
-<p>hero-content works!</p>
+<header>
+    <div class="header-content">
+        <h1>BAR PIZZERIA DEL CORSO</h1>
+        <h4>Seguici sui Social</h4>
+    </div>
+</header>
